[gd_scene load_steps=11 format=3 uid="uid://bcvat5pf5c4yx"]

[ext_resource type="Script" uid="uid://ck0xh51jwufiq" path="res://scripts/profile/profile.gd" id="1_xehbf"]
[ext_resource type="Texture2D" uid="uid://bo2r7qt23qikr" path="res://assets/profile/Id.png" id="2_i2it1"]
[ext_resource type="Texture2D" uid="uid://didpw7uwpljtw" path="res://assets/shop/skins/default.png" id="3_bhy3x"]
[ext_resource type="FontFile" uid="uid://cbwhuecpnnapj" path="res://fonts/ByteBounce.ttf" id="4_ndnbx"]

[sub_resource type="Theme" id="Theme_xehbf"]
default_font = ExtResource("4_ndnbx")

[sub_resource type="LabelSettings" id="LabelSettings_kynku"]
font = ExtResource("4_ndnbx")
font_size = 28
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qsu5w"]
font = ExtResource("4_ndnbx")
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4cwwv"]
bg_color = Color(1, 0.260006, 0.200835, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_il0f0"]
bg_color = Color(0.52353, 1.48604e-06, 2.88785e-07, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5wtn8"]
resource_local_to_scene = true
bg_color = Color(0.965052, 4.3799e-06, 1.54018e-06, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Profile" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_xehbf")
script = ExtResource("1_xehbf")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.131379, 0.131379, 0.131379, 1)

[node name="ReturnButton" type="Button" parent="."]
offset_left = 32.0
offset_top = 32.0
offset_right = 160.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 20
text = "Return"

[node name="Id" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -124.0
offset_right = 256.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_i2it1")
expand_mode = 3
stretch_mode = 4

[node name="Profile" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 376.0
offset_top = 280.0
offset_right = 498.0
offset_bottom = 394.0
texture = ExtResource("3_bhy3x")
expand_mode = 3
stretch_mode = 5

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = 520.0
offset_top = 288.0
offset_right = 744.0
offset_bottom = 328.0

[node name="Name" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "lalala"
label_settings = SubResource("LabelSettings_kynku")
vertical_alignment = 1

[node name="NameEdit" type="TextEdit" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_ndnbx")
theme_override_font_sizes/font_size = 28
wrap_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 520.0
offset_top = 272.0
offset_right = 560.0
offset_bottom = 283.0
text = "Name"
label_settings = SubResource("LabelSettings_qsu5w")

[node name="Delete" type="Button" parent="."]
layout_mode = 0
offset_left = 520.0
offset_top = 352.0
offset_right = 664.0
offset_bottom = 375.0
theme_override_fonts/font = ExtResource("4_ndnbx")
theme_override_styles/hover = SubResource("StyleBoxFlat_4cwwv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_il0f0")
theme_override_styles/normal = SubResource("StyleBoxFlat_5wtn8")
text = "Delete Account"

[node name="EditButton" type="Button" parent="."]
layout_mode = 0
offset_left = 752.0
offset_top = 280.0
offset_right = 808.0
offset_bottom = 299.0
theme_override_fonts/font = ExtResource("4_ndnbx")
text = "Edit"

[node name="CancelEditButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 752.0
offset_top = 312.0
offset_right = 808.0
offset_bottom = 331.0
theme_override_fonts/font = ExtResource("4_ndnbx")
text = "Cancel"

[node name="Dialogs" type="Node" parent="."]

[node name="RestartDialog" type="AcceptDialog" parent="Dialogs"]
unique_name_in_owner = true
title = "Account Deleted"
initial_position = 1
size = Vector2i(378, 100)
dialog_text = "Your account has been deleted. Restart Game?"
dialog_autowrap = true

[node name="DeleteDialog" type="ConfirmationDialog" parent="Dialogs"]
unique_name_in_owner = true
title = "Confirm Delete"
initial_position = 1
size = Vector2i(485, 106)
always_on_top = true
dialog_text = "Are you sure that you want to delete your account?
Your progress, coins, high scores, and upgrades will be reset."
dialog_autowrap = true

[node name="DeleteRetryDialog" type="ConfirmationDialog" parent="Dialogs"]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Retry Delete"
initial_position = 1
size = Vector2i(485, 106)
always_on_top = true
ok_button_text = "Retry Delete"
dialog_text = "Error Dialog"
dialog_autowrap = true

[node name="Dialog" type="AcceptDialog" parent="Dialogs"]
unique_name_in_owner = true
title = "Error"
initial_position = 1
size = Vector2i(313, 106)
dialog_autowrap = true

[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="CancelEditButton" to="." method="_on_cancel_edit_button_pressed"]
[connection signal="confirmed" from="Dialogs/RestartDialog" to="." method="_on_restart_dialog_confirmed"]
[connection signal="custom_action" from="Dialogs/RestartDialog" to="." method="_on_restart_dialog_custom_action"]
[connection signal="confirmed" from="Dialogs/DeleteDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="confirmed" from="Dialogs/DeleteRetryDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="custom_action" from="Dialogs/DeleteRetryDialog" to="." method="_on_retry_dialog_custom_action"]
